# Tricount-Desktop-Clone

./: LICENSE
Tricount/: BalancesView.qml  CMakeLists.txt  ExpensesView.qml  LeftPanel.qml  Main.qml  NewExpenseOverlay.qml  NewGroupOverlay.qml  RightPanel.qml  main.cpp  tricountapi.cpp  tricountapi.h
TricountServer/: CMakeLists.txt  main.cpp
